--- a/404.html
+++ b/404.html
@@ -6,23 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ping Pong Game</title>
   <script>
-    // Single Page Apps for GitHub Pages
-    // This script takes the current URL and converts the path and query string into
-    // just a query string, and then redirects the browser to the new URL with
-    // only a query string and hash fragment.
-    (function(l) {
-      if (l.search[1] === '/' ) {
-        var decoded = l.search.slice(1).split('&').map(function(s) { 
-          return s.replace(/~and~/g, '&')
-        }).join('?');
-        window.history.replaceState(null, null,
-            l.pathname.slice(0, -1) + decoded + l.hash
-        );
-      }
-    }(window.location))
+    // Segment to handle GitHub Pages SPA routing
+    // Extracts the repo name for proper path handling
+    var pathSegmentsToKeep = 1; // Number of path segments to keep (1 for the repo name)
+    
+    var l = window.location;
+    l.replace(
+      l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+      l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+      l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+      (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+      l.hash
+    );
   </script>
-  <!-- Redirect to the home page after the script runs -->
-  <meta http-equiv="refresh" content="0;URL='/'">
 </head>
 <body>
   <p>Redirecting to home page...</p>
